@@ -6,12 +6,15 @@ New Features:
 - A Splitter Node can have a custom transition UI via Layout (Qml) Resource.
 
 Changes:
+- PlayerTextBox methods showButtonPrompts & showInput take an aditional optional
+  argument that denotes which storage variable the result should be written to.
 - Tags objects in scripts have new getter methods: numResources & resources.
 
 Fixed Bugs:
 - Fixed a crash when removing a resource with tags.
 - Fixed a crash when loading an image and giving an invalid project-id.
 - Fix for potential crash on closing the app while in the editor.
+- Fixed storing values from showInput into storage. It works now as intended.
 
 =================
 Version 1.4.0.0
